--- a/work/index.html
+++ b/work/index.html
@@ -73,19 +73,6 @@
 <body>
 
     <main>
-        <section>
-            <div class="container">
-                <h1>
-                    Horizontal Scroll
-                </h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod et deleniti voluptatum tempora
-                    illo perferendis dolores, magni sequi! Vero ex dolorum consequatur iste omnis nesciunt minima
-                    tenetur reiciendis quia?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod et deleniti voluptatum tempora
-                    illo perferendis dolores, magni sequi! Vero ex dolorum consequatur iste omnis nesciunt minima
-                    tenetur reiciendis quia?</p>
-            </div>
-        </section>
 
         <div class="sticky_parent">
             <div class="sticky">
@@ -102,7 +89,7 @@
             </div>
         </div>
 
-        <section>
+        <!-- <section>
             <div class="container">
                 <h1>
                     About
@@ -114,27 +101,7 @@
                     illo perferendis dolores, magni sequi! Vero ex dolorum consequatur iste omnis nesciunt minima
                     tenetur reiciendis quia?</p>
             </div>
-        </section>
-
-        <!-- <div class="sticky_parent">
-            <div class="sticky">
-                <div class="scroll_section"></div>
-            </div>
-        </div> -->
-
-        <section>
-            <div class="container">
-                <h1>
-                    End
-                </h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod et deleniti voluptatum tempora
-                    illo perferendis dolores, magni sequi! Vero ex dolorum consequatur iste omnis nesciunt minima
-                    tenetur reiciendis quia?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quod et deleniti voluptatum tempora
-                    illo perferendis dolores, magni sequi! Vero ex dolorum consequatur iste omnis nesciunt minima
-                    tenetur reiciendis quia?</p>
-            </div>
-        </section>
+        </section> -->
     </main>
 
     <script src="app.js"></script>
