--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     </div>
                     <div class="preloader-title flex absolute center-children cursor-scale">
                         <div class="preloader-title-word content">D</div><div class="preloader-title-word content">h</div><div class="preloader-title-word content">i</div><div class="preloader-title-word content">r</div><div class="preloader-title-word content">l</div><div class="preloader-title-word content">y</div>
+                        <!-- <div class="preloader-title-word content">Dhirly</div> -->
                         <div class="preloader-title-word content dummy">-</div>
+                        <!-- <div class="preloader-title-word content">Ramadhan</div> -->
                         <div class="preloader-title-word content">R</div><div class="preloader-title-word content">a</div><div class="preloader-title-word content">m</div><div class="preloader-title-word content">a</div><div class="preloader-title-word content">d</div><div class="preloader-title-word content">h</div><div class="preloader-title-word content">a</div><div class="preloader-title-word content">n</div>
                     </div>
                 </div>
