--- a/index.html
+++ b/index.html
@@ -39,11 +39,23 @@
                         </div>
                     </div>
                     <div class="preloader-title flex absolute center-children cursor-scale">
-                        <div class="preloader-title-word content">D</div><div class="preloader-title-word content">h</div><div class="preloader-title-word content">i</div><div class="preloader-title-word content">r</div><div class="preloader-title-word content">l</div><div class="preloader-title-word content">y</div>
+                        <div class="preloader-title-word content">D</div>
+                        <div class="preloader-title-word content">h</div>
+                        <div class="preloader-title-word content">i</div>
+                        <div class="preloader-title-word content">r</div>
+                        <div class="preloader-title-word content">l</div>
+                        <div class="preloader-title-word content">y</div>
                         <!-- <div class="preloader-title-word content">Dhirly</div> -->
                         <div class="preloader-title-word content dummy">-</div>
                         <!-- <div class="preloader-title-word content">Ramadhan</div> -->
-                        <div class="preloader-title-word content">R</div><div class="preloader-title-word content">a</div><div class="preloader-title-word content">m</div><div class="preloader-title-word content">a</div><div class="preloader-title-word content">d</div><div class="preloader-title-word content">h</div><div class="preloader-title-word content">a</div><div class="preloader-title-word content">n</div>
+                        <div class="preloader-title-word content">R</div>
+                        <div class="preloader-title-word content">a</div>
+                        <div class="preloader-title-word content">m</div>
+                        <div class="preloader-title-word content">a</div>
+                        <div class="preloader-title-word content">d</div>
+                        <div class="preloader-title-word content">h</div>
+                        <div class="preloader-title-word content">a</div>
+                        <div class="preloader-title-word content">n</div>
                     </div>
                 </div>
                 <div class="preloader-dummy width"></div>
@@ -58,11 +70,58 @@
                         <span class="typhography cursor-scale">Software</span>
                         <span class="typhography cursor-scale">Engineer</span>
                         <span class="absolute center-children cursor-scale" id="typhography-image">
-                            <img src="src/assets/5.png" width="250px" alt="" srcset="">
+                            <img src="src/assets/5.png" width="240px" alt="" srcset="">
                         </span>
                     </div>
                 </div>
             </section>
+
+            <!-- <section class="about-me-page padding-section" id="about-me-page">
+                <div class="wrapper flex gap-large row-responsive text-pretty">
+                    <div class="flex-2 text-medium">
+                        <span class="cursor-scale small">
+                            Lorem ipsum dolor sit amet,<br>adipisicing elit. Eum, autem!
+                        </span>
+                    </div>
+                    <div class="flex-3">
+                        <div class="flex column gap-medium">
+                            <span class="text-large">
+                                <span class="cursor-scale">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus quas animi
+                                    quibusdam debitis voluptates facere provident, in nam possimus ipsum!
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
+
+            <div class="sticky_parent" id="my-work-page">
+                <div class="sticky">
+                    <div class="scroll_section">
+                        <div class="wrapper padding-medium flex column">
+                            <div class="flex-1 flex" id="gallery-content">
+                                <div class="wrapper center-justify-parent flex gap-medium">
+                                    <div class="photos screen-height" id="gallery-photos">
+
+                                    </div>
+                                    <div class="photos screen-height" id="gallery-photos">
+
+                                    </div>
+                                    <div class="photos screen-height" id="gallery-photos">
+
+                                    </div>
+                                    <div class="photos screen-height" id="gallery-photos">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
         </div>
 
@@ -75,6 +134,7 @@
     <script src="src/script/navbar.js"></script>
     <script src="src/script/preloader.js"></script>
     <script src="src/script/themes.js"></script>
+    <script src="src/script/horizontal-scroll.js"></script>
 
 </body>
 
