--- a/index.html
+++ b/index.html
@@ -101,18 +101,22 @@
                     <div class="scroll_section">
                         <div class="wrapper padding-medium flex column">
                             <div class="flex-1 flex" id="gallery-content">
-                                <div class="wrapper center-justify-parent flex gap-medium">
-                                    <div class="photos screen-height" id="gallery-photos">
+                                <div class="wrapper center-justify-parent row-responsive flex gap-medium">
+                                    <div class="divider flex row center-parent">
+                                        <div class="photos screen-height gallery-photos">
 
+                                        </div>
+                                        <div class="photos screen-height gallery-photos">
+
+                                        </div>
                                     </div>
-                                    <div class="photos screen-height" id="gallery-photos">
+                                    <div class="divider flex row center-parent">
+                                        <div class="photos screen-height gallery-photos">
 
-                                    </div>
-                                    <div class="photos screen-height" id="gallery-photos">
+                                        </div>
+                                        <div class="photos screen-height gallery-photos">
 
-                                    </div>
-                                    <div class="photos screen-height" id="gallery-photos">
-
+                                        </div>
                                     </div>
                                 </div>
                             </div>
